fix title alignemt (forked and patched mozilla/metrics-graphics)

--- a/client/static/metricsgraphics.css
+++ b/client/static/metricsgraphics.css
@@ -25,12 +25,19 @@
     fill: #5c5c5c;
 }
 
+text.mg-barplot-group-label {
+    font-weight:900;
+}
+
 .mg-barplot rect.mg-bar {
     shape-rendering: auto;
+}
+
+.mg-barplot rect.mg-bar.default-bar {
     fill: #b6b6fc;
 }
 
-.mg-barplot rect.mg-bar.active {
+.mg-barplot rect.mg-bar.default-active {
     fill: #9e9efc;
 }
 
@@ -41,6 +48,13 @@
 .mg-barplot .mg-bar-baseline {
     stroke: #5b5b5b;
     stroke-width: 2;
+}
+
+.mg-bar-target-element {
+    font-size:11px;
+    padding-left:5px;
+    padding-right:5px;
+    font-weight:300;
 }
 
 .mg-baselines line {
@@ -137,6 +151,10 @@
     opacity: 0.7;
     shape-rendering: auto;
     stroke: #ccc;
+}
+
+tspan.hist-symbol {
+    fill: #9e9efc;
 }
 
 .mg-histogram .mg-bar rect {
@@ -294,6 +312,11 @@ circle.mg-points-mono {
     stroke: #0000ff;
 }
 
+tspan.mg-points-mono {
+    fill: #0000ff;
+    stroke: #0000ff; 
+}
+
 /* a selected point in a scatterplot */
 .mg-points circle.selected {
     fill-opacity: 1;
@@ -314,7 +337,7 @@ circle.mg-points-mono {
 
 .mg-x-axis line,
 .mg-y-axis line {
-    opacity: 1;
+    opacity: 0.4;
     shape-rendering: auto;
     stroke: #b3b2b2;
     stroke-width: 1px;
